RESOLVED FIXED150545
[TexMap] Fix a misused flag for GstGL
https://bugs.webkit.org/show_bug.cgi?id=150545
Summary [TexMap] Fix a misused flag for GstGL
Gwang Yoon Hwang
Reported 2015-10-25 06:27:54 PDT
[TexMap] Fix a misused flag for GstGL
Attachments
Patch (1.90 KB, patch)
2015-10-25 06:28 PDT, Gwang Yoon Hwang
no flags
Gwang Yoon Hwang
Comment 1 2015-10-25 06:28:50 PDT
WebKit Commit Bot
Comment 2 2015-10-25 08:11:13 PDT
Comment on attachment 264009 [details] Patch Clearing flags on attachment: 264009 Committed r191549: <http://trac.webkit.org/changeset/191549>
WebKit Commit Bot
Comment 3 2015-10-25 08:11:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.