[TexMap] Fix a misused flag for GstGL https://bugs.webkit.org/show_bug.cgi?id=150545

Reviewed by Žan Doberšek.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::paintToTextureMapper):
We should pass TextureMapperGL::Flags to the TextureMapperGL::drawTexture instead of
BitmapTexture::Flags.


Canonical link: https://commits.webkit.org/168696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191549 268f45cc-cd09-0410-ab3c-d52691b4dbfc